--- a/index.html
+++ b/index.html
@@ -23,7 +23,12 @@
     <footer>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Id sunt impedit, repudiandae natus ab, soluta odio
             obcaecati est accusamus laudantium corporis error perferendis iste recusandae, temporibus nemo aliquid dicta
-            dolore?</p>
+            dolore?
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sed laboriosam cupiditate, sapiente reiciendis
+            quaerat modi deserunt unde, in quam nam porro ullam alias. Magni quibusdam architecto quia quaerat delectus
+            unde!
+        </p>
+        <p>Video Link: <a class="videolink" href="https://youtu.be/OqhC4L2wu8Y">https://youtu.be/OqhC4L2wu8Y</a></p>
     </footer>
 
 
